Fix font visibility + update signature color

--- a/docs/CSS/under-construction.css
+++ b/docs/CSS/under-construction.css
@@ -73,7 +73,7 @@ p {
     font-family: 'Italiana';
     font-weight: 700;
     font-size: 40px;
-    color: var(--Forest-roast);
+    color: var(--Cedar-molases);
 }
 
 .video-placeholder {
